--- a/tox.ini
+++ b/tox.ini
@@ -605,6 +605,20 @@ deps=
 commands=sphinx-build -W -b html docs docs/_build/html
 basepython=python
 
+[testenv:profile-benchmark]
+deps = {[testenv]deps}
+       pyperformance
+       chameleon
+       pyaes
+       django
+       dulwich
+       genshi
+       html5lib
+       mako
+       sqlalchemy
+       sympy
+commands = {toxinidir}/scripts/profile-benchmark.sh
+
 # DEV: We use `conftest.py` as a local pytest plugin to configure hooks for collection
 [pytest]
 # Common directories to ignore
